Removed inline styles, fixed bad import of withStyles, fixed offset=null bug, styled scrollbar and made scrolling smooth

--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,30 @@
   margin: 0;
   padding: 0;
   font-family: "Lexand" sans-serif;
+  /* Customize scrollbar appearance */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* Corner */
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
 }
